# cancer_genomics_analysis_suite

./: .env.example  .gitignore  BUILD_TOOLS_TROUBLESHOOTING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALLATION_STATUS_AND_SOLUTIONS.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements-lock.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci-cd-pipeline.yml  ci.yml  monthly-health-trend.yml  security.yml
CancerGenomicsSuite/: .coveragerc  ADVANCED_INTEGRATION_SUMMARY.md  ADVANCED_TECHNOLOGIES_INTEGRATION.md  AI_QUICK_START_GUIDE.md  AUTH_ROUTES.md  AUTH_SETUP.md  BIOMARKER_DRUG_ANALYSIS_README.md  BIOMARKER_INTEGRATION_PLAN.md  BIOMARKER_INTEGRATION_README.md  CELERY_SETUP.md  CLEANUP_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  Dockerfile  FLASK_SETUP.md  INTEGRATION_COMPLETE_SUMMARY.md  INTEGRATION_UPDATES.md  README.md  USER_MODEL.md  WEBHOOK_FALLBACK_IMPLEMENTATION.md  __init__.py  auth_example.py  celery_worker.py  cli_bioinformatics_tools.py  docker-compose.advanced.yml  docker-compose.kafka.yml  docker-compose.yml  environment.advanced.template  environment.template  integrated_services_config.json  main_dashboard.py  plugin_registry.py  requirements.txt  run_all_tests.py  run_celery_worker.py  run_flask_app.py  simulate_workflow.py  start_dashboard.bat  test_auth_routes.py  test_config.py  (+8 more)
CancerGenomicsSuite/api_docs/: README.md  openapi.yaml  swagger_ui.py
CancerGenomicsSuite/api_integrations/: __init__.py  clinvar_sync.py  cosmic_fetcher.py  encode_downloader.py  scopus_client.py
CancerGenomicsSuite/app/: __init__.py  celery_config.py
CancerGenomicsSuite/argocd/: README.md  argocd-app.yaml  argocd-config.yaml  argocd-project.yaml  kafka-application.yaml  monitoring-application.yaml
CancerGenomicsSuite/celery_worker/: __init__.py
CancerGenomicsSuite/config/: __init__.py  ai_config.py  settings.py
CancerGenomicsSuite/data/: mock_clinical_data.csv  mock_expression_data.csv  mock_mutation_data.csv  mock_pathway_list.txt
CancerGenomicsSuite/docs/: bioinformatics_tools_integration.md  index.md
CancerGenomicsSuite/examples/: advanced_technologies_example.py  ai_integration_example.py  alert_monitor_webhook_example.py  biomarker_drug_analysis_example.py  biomarker_integration_example.py  example_ngs_pipeline.yaml  ngs_pipeline_usage_example.py  test_webhook_notifications.py  webhook_configuration_example.env
CancerGenomicsSuite/integrations/: __init__.py  biomarker_gateway.py  biomarker_service.py  compatibility.py  config.py  dask_compatibility_patch.py  service_discovery.py  unified_interface.py
CancerGenomicsSuite/k8s/: aws-secrets.yaml  celery-deployment.yaml  cert-manager.yaml  configmap.yaml  gcp-secrets.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  neo4j-deployment.yaml  nginx-deployment.yaml  postgres.yaml  redis.yaml  web-deployment.yaml
CancerGenomicsSuite/modules/: __init__.py  ngs_pipeline_integration.py
CancerGenomicsSuite/reporting_engine/: __init__.py  html_reporter.py  pdf_builder.py  template_utils.py
CancerGenomicsSuite/scripts/: AUTO_GENERATION_SUMMARY.md  README.md  auto_generation_config.json  example_usage.py  generate_blast_databases.py  generate_mock_data.py  run_auto_generation.bat  run_auto_generation.sh  setup_advanced_technologies.bat  setup_advanced_technologies.sh  setup_auto_generation.py  start_integrated_services.py
CancerGenomicsSuite/tasks/: __init__.py  annotation_pipeline.py  blast_pipeline.py  ml_predictor_pipeline.py  queue_manager.py  reporting_pipeline.py
CancerGenomicsSuite/templates/: index.html
CancerGenomicsSuite/terraform/: README.md  aws.tf  gcp.tf  helm.tf  kubernetes.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
CancerGenomicsSuite/tests/: conftest.py  test_api_integrations.py  test_biomarker_drug_analysis.py  test_checkv_integration.py  test_dna_sequence_analyzer.py  test_encode_integration.py  test_reporting_engine.py  test_runner.py  test_scopus_integration.py  test_workflow_simulation.py
data/: temp_ml_test.csv
data/test_ensembl/: ensembl_genes_8_samples_20260129_123434.csv  ensembl_genes_8_samples_20260129_123434.json  ensembl_transcripts_103_samples_20260129_123445.csv  ensembl_transcripts_103_samples_20260129_123445.json  ensembl_xrefs_246_samples_20260129_123450.csv  ensembl_xrefs_246_samples_20260129_123450.json
data_collection/: README.md  __init__.py  base_collector.py  biogrid_collector.py  biomarker_validation_database_collector.py  biomarkers_consortium_collector.py  brats_collector.py  camelyon_collector.py  cancer_biomarker_atlas_collector.py  cancer_genome_interpreter_collector.py  cancer_immunome_collector.py  cancer_target_discovery_collector.py  canprovar_collector.py  cbioportal_collector.py  ccle_collector.py  cdc_collector.py  chembl_collector.py  clinical_trials_drugs_collector.py  clinicaltrials_gov_collector.py  clinvar_collector.py  config.json  cosmic_collector.py  cptac_collector.py  cptac_proteomics_collector.py  dailymed_collector.py  data_preprocessing.py  dbnsfp_collector.py  ddsm_collector.py  demo_usage.py  depmap_collector.py  disgenet_collector.py  drug_approval_database_collector.py  drug_competitor_database_collector.py  drug_development_pipeline_collector.py  drug_effectiveness_database_collector.py  drug_formulation_database_collector.py  drug_interaction_database_collector.py  drug_investment_database_collector.py  drug_licensing_database_collector.py  drug_manufacturing_database_collector.py  (+97 more)
docker/: docker-compose.db.yml
docs/: BENCHMARKS.md  BENCHMARKS_HARNESS.md  DEPLOYMENT_GUIDE.md  LOCAL_HELM_QUICKSTART.md  MD_GROMACS_AND_ENSEMBL.md  README.md  installation.md  testing_confidence.md
docs/notes/: ADDITIONAL_DATA_SOURCES_SUMMARY.md  AI_INTEGRATION_SUMMARY.md  BIOMARKER_DRUG_DATA_EXPANSION_SUMMARY.md  BIOMARKER_DRUG_IMPLEMENTATION_SUMMARY.md  (+3 more)
scripts/: setup_postgresql.py
workflows/: __init__.py  sample_analysis_workflow.py
(+366 files in other folders)
